# mobro_sim

./: CMakeLists.txt  README.md  package.xml
include/mobro_sim/: bicycle.h  robot.h  traj.h  unicycle.h  utils.h
launch/: amcl_launch.py  config_multi.rviz  config_rosbot_amcl.rviz  sim_multi.py  sim_rosbot_amcl.py
maps/: map.pgm  map.yaml
params/: amcl_param.yaml
src/: robot.cpp  simulator.cpp
urdf/: bike.urdf  r2d2.urdf  r2d2_obs1.urdf  r2d2_obs2.urdf  rosbot.urdf
