<?xml version="1.0"?>
<package format="2">
  <name>mobro_sim</name>
  <version>1.0.0</version>
  <description>Mobile robot virtual environment based on a light simulator package.</description>

  <maintainer email="simone.contorno@outlook.it">Simone Contorno</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>urdf</depend>
  <depend>urdfdom_headers</depend>

  <export>
       <build_type>ament_cmake</build_type>
  </export>
</package>
